<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:orientation="vertical">
           <ImageView
               android:layout_width="150dp"
               android:layout_height="150dp"
               android:layout_marginTop="36dp"
               android:src="@drawable/logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_subtitle"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news_title"
                android:textSize="18sp"
                android:layout_marginTop="36dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/thumb"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/gradient_overlay"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="15 - февраля старт обучения в новом офисе"
                    android:textSize="20sp"
                    android:layout_margin="8dp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textStyle="bold"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/services_titile"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="72dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/service_language"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_weight="1"
                        android:layout_marginRight="8dp">
                        <ImageView
                            android:id="@+id/language"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/image_1"
                            android:scaleType="centerCrop"/>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/solid_overlay"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/service_language"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/service_camp"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="8dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/image_2"
                            android:scaleType="centerCrop"/>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/solid_overlay"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/service_camp"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/service_talking"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_weight="1"
                        android:layout_marginRight="8dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/image_3"
                            android:scaleType="centerCrop"/>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/solid_overlay"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/service_talking"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/service_toefl"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="8dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/image_4"
                            android:scaleType="centerCrop"/>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/solid_overlay"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/service_toefl"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_margin="24dp"
        android:background="@drawable/call_button_bg"
        android:text="@string/button_call"
        android:textSize="18dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>